--- a/Tutorial_1_Week_2.ipynb
+++ b/Tutorial_1_Week_2.ipynb
@@ -1046,7 +1046,7 @@
         "id": "IFzUnwymUS9o"
       },
       "source": [
-        "1 blanco"
+        "analysis: we select of an image the colour than we want filter (R, G or B) then convert the colour to the maximum values, and for this reason the image show white. "
       ]
     }
   ]
